<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoAlbum</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Geo Album</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_take_picture">Take Picture</string>
    <string name="_picTitle">Title</string>
    <string name="_picDesc">Description</string>
    <string name="_picLat">Latitude</string>
    <string name="_picLon">Longitude</string>
    <string name="_picDate">Date</string>
    <string name="_picPath">Path</string>
    <string name="_acceptPic">Accept</string>
    <string name="_cancelPic">Cancel</string>
    <string name="_picLocation">Location</string>
    <string name="_snapButtonText">Snap</string>
    <string name="_mapButtonText">Map</string>
    <string name="_morePicsButtonText">More</string>
    <string name="_recentPhotos">Recent Photos</string>
    <string name="_deleteText">Delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_photo_detail_fragment">PhotoDetailFragment</string>
    <string name="title_activity_picture_detail">Photo Detail</string>
    <string name="title_activity_photo_viewer">Photo</string>

</resources>
