<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sdsu.hoanh.geoalbum.ImageDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="4dp"
            >
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/_picImageView" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/_picTitle"
                    android:id="@+id/textView" />

                <EditText
                    android:layout_width="271dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/_picTitle" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/_picDesc"
            />
        <EditText android:id="@+id/_picDescEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_picLocation"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        <EditText android:id="@+id/_picLocationEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:enabled="false"
            />

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/_picLon"-->
            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
            <!--/>-->
        <!--<EditText android:id="@+id/_picLonEntry"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="16dp"-->
            <!--/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_picDate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <!--<TextView android:id="@+id/_picDateEntry"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="March 10, 2015"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--/>-->

        <EditText android:id="@+id/_picDateEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:enabled="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_picPath"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />

        <EditText android:id="@+id/_picPathEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:enabled="false" />
    </LinearLayout>

</FrameLayout>
